# social_admin

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  monitoring.py
app/backend/: __init__.py  ai_workflow.py  auth.py  config.py  database.py  http_logging.py  logging_config.py  logging_utils.py  models.py
app/backend/security/: __init__.py  crypto.py
app/backend/services/: __init__.py  ai_client.py  data_access.py  job_processor.py  job_service.py  permissions.py  storage.py  text_graphy.py  trending_video.py  worker.py
app/security/: __init__.py
app/services/: __init__.py  job_service.py  storage.py  trending_video.py  worker.py
app/static/css/: style.css
app/templates/: account_form.html  accounts.html  base.html  dashboard.html  login.html  scheduler.html  settings.html
app/ui/: __init__.py  app.py
app/ui/app_presenters/: __init__.py  accounts_presenter.py  ai_presenter.py  auth_presenter.py  dashboard_presenter.py  documentation_presenter.py  helpers.py  logs_presenter.py  manual_video_presenter.py  (+4 more)
app/video/: __init__.py  watermark.py
docs/: project_spec.md
scripts/: create_trend_video.py
tests/: test_ai_client.py  test_database_migrations.py  test_documentation_presenter.py  test_e2e_job_workflow.py  test_job_processor.py  test_job_service.py  test_logs_stream.py  test_manual_video_presenter.py  test_monitoring.py  test_security.py  test_templates.py  test_text_graphy_presenter.py  test_text_graphy_service.py  test_video_pipeline.py  test_watermark.py
(+28 files in other folders)
