[tool.poetry]
name = "social-admin"
version = "0.1.0"
description = "پنل مدیریت برای تولید و انتشار محتوای خودکار"
authors = ["Auto Generated <auto@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {version = "^0.29.0", extras = ["standard"]}
SQLAlchemy = "^2.0.25"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
