[tool.poetry]
name = "social-admin"
version = "0.1.0"
description = "پنل مدیریت برای تولید و انتشار محتوای خودکار"
authors = ["Auto Generated <auto@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {version = "^0.29.0", extras = ["standard"]}
SQLAlchemy = "^2.0.25"
bcrypt = "<4"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
httpx = "^0.27.0"
requests = "^2.31.0"
itsdangerous = "^2.1.2"
moviepy = "^1.0.3"
deep-translator = "^1.11.4"
arabic-reshaper = "^3.0.0"
python-bidi = "^0.4.2"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
